force-app/main/default/objects/Adjusment__c.object
<CustomObject>
    <label>Adjusment</label>
    <nameField>
        <displayFormat>Adjustment - {0000}</displayFormat>
        <label>Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjusments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>