force-app/main/default/objects/Adjusment__c/fields/Fee_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Fee_Payment_Method__c</fullName>
    <label>Fee Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>