force-app/main/default/objects/Adjusment__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>Adjusments</relationshipLabel>
    <relationshipName>Adjusments</relationshipName>
    <type>Lookup</type>
</CustomField>